--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -58,7 +58,7 @@
             <button style="color: black; font-weight: bold; box-shadow: 0px 0px 15px 0px #000000; border-radius: 7px; stroke-width: 0px; padding: 20px 50px; background-color: grey;">Rules</button>
         </a>
         <a href="https://forms.gle/UbxnuBAUD2PmYscY6">
-            <button style="color: black; font-weight: bold; box-shadow: 0px 0px 15px 0px #000000; border-radius: 7px; stroke-width: 0px; padding: 20px 50px; background-color: grey;">Bug Report</button>
+            <button style="color: black; font-weight: bold; box-shadow: 0px 0px 15px 0px #000000; border-radius: 7px; stroke-width: 0px; padding: 20px 50px; background-color: grey; float: right;">Bug Report</button>
         </a>
             </center>
             
