--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -5,29 +5,66 @@
         body {
             background: #96ff8c;
         }
+        .dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+
+
+
+.dropdown-content  {
+  display: none;
+  position: absolute;
+  background-color: #363636;
+  min-width: 160px;
+  border-radius: 15px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content2  {
+  color: rgb(255, 255, 255);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  background: transparent;
+}
+
+.dropdown-content a:hover {background-color: #ddd; border-radius: 15px;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <p style="color: rgb(113, 0, 158); font-size: 20px; font-weight: bold; float: left; "><img src="/static/contactchain.png" alt="Icon" width="30" height="30">       Contact Chain</p>
+    
     
     <% if (typeof user !=='undefined' ) { %>
-        <p style="color: black; font-size: 20px; font-weight: bold; float: right; ">Welcome <%= user %>
+        <p style="color: black; font-size: 20px; font-weight: bold; float: right; ">Welcome 
         </p>
         <br>
+        <p style="color: rgb(113, 0, 158); font-size: 20px; font-weight: bold; float: left; "><img src="/static/contactchain.png" alt="Icon" width="30" height="30">       Contact Chain</p>
+        <br>
+        <br>
+        <div style="float: right;" class="dropdown" ><button class="dropbtn" style="color: black; font-weight: bold; box-shadow: 0px 0px 15px 1px #eeff00; border-radius: 7px; stroke-width: 0px; padding: 5px 10px; background-color: grey; float: right;"><%= user %></button>
+            <br>
+            <br>
+            <div class="dropdown-content">
+                <a href="/" class="dropdown-content2">Home</a>
+                <a href="/admin" class="dropdown-content2">Settings</a>
+                <a href="/logout"  class="dropdown-content2">Logout</a>
+              </div>
+            </div>
+        <br>
         <center>
-            <br><br><br><br>
-            <a href="/logout">
-                <button
-                    style="color: black; font-weight: bold; box-shadow: 0px 0px 15px 0px #000000; border-radius: 7px; stroke-width: 0px; padding: 20px 50px; background-color: grey;">Logout</button>
-            </a>
-            <br>
-            <br>
-            <a href="/admin">
-                <button
-                    style="color: rgb(255, 251, 0); background: red;  font-weight: bold; box-shadow: 0px 0px 15px 0px #00eeff; border-radius: 7px; stroke-width: 0px; padding: 20px 50px; background-color: rgb(255, 0, 0);">Admin</button>
-            </a>
+            
             <br>
             <br>
             <a href="/app">
@@ -54,12 +91,14 @@
                 <br>
         <br>
         <br>
+        <br>
+    </center>
         <a href="/rules">
             <button style="color: black; font-weight: bold; box-shadow: 0px 0px 15px 0px #000000; border-radius: 7px; stroke-width: 0px; padding: 20px 50px; background-color: grey;">Rules</button>
         </a>
         <a href="https://forms.gle/UbxnuBAUD2PmYscY6">
             <button style="color: black; font-weight: bold; box-shadow: 0px 0px 15px 0px #000000; border-radius: 7px; stroke-width: 0px; padding: 20px 50px; background-color: grey; float: right;">Bug Report</button>
         </a>
-            </center>
+            
             
 </body>
