--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -1,6 +1,7 @@
 <head>
     <title>Home Page</title>
     <link rel="shortcut icon" type="image/jpg" href="/static/favicon.ico"/>
+    <script data-ad-client="ca-pub-5556469549392401" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <style>
         body {
             background: #96ff8c;
