--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -1,4 +1,6 @@
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5495814268572722"
+     crossorigin="anonymous"></script>
     <title>Home Page</title>
     <link rel="shortcut icon" type="image/jpg" href="/static/favicon.ico"/>
     <script data-ad-client="ca-pub-5556469549392401" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
