--- a/ejs/password-reset.ejs
+++ b/ejs/password-reset.ejs
@@ -1,4 +1,6 @@
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5495814268572722"
+     crossorigin="anonymous"></script>
     <title>Password Reset</title>
     <link rel="shortcut icon" type="image/jpg" href="/static/favicon.ico"/>
     <style>
