--- a/ejs/warn.ejs
+++ b/ejs/warn.ejs
@@ -29,9 +29,9 @@
 <body>
     <center>
         <h1>Warning</h1>
-        <h2>You have recieved moderation message(s).</h2>
+        <h2>You have recieved a warning from your post(s).</h2>
         <h2>If you continue to break the rules, you will be blacklisted.</h2>
-        <h3>These moderation message(s) are regarding the following posts:</h3>
+        <h3>This/These post(s) are violating the rules:</h3>
         <br>
         <% for (let i = 0; i < posts.length; i++) { %>
             <article>
